fixed issue with spacing on input

--- a/DawesRollsViewer/src/app/header/header.component.scss
+++ b/DawesRollsViewer/src/app/header/header.component.scss
@@ -30,5 +30,5 @@
   ::ng-deep span.p-input-icon-left {
     position: relative;
     margin-bottom: 20px;
-    left: 80%;
+    left: 3%;
   }
